# rust_rpg_toolkit

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  config.json
.github/: FUNDING.yml
assets/: abilities.json  actors.json  dialogue.json  fleets.png~  items.json  missions.json  neo_zero_tiles_and_buildings_01.png~  resources.json  scenario.json  test.json  tiled_maps.json
assets/maps/: capstone_map.json  chapter_01_map_01.json  chapter_01_map_01_tiled.json  chapter_01_map_02.json  converted.json  converted_tiled_map.json  ldtk_test.ldtk  map_01.json  test_capstone_map.json  test_tiled_map.json
assets/maps/tiled_maps/: chapter_01_map_01.json  chapter_01_map_02.json
assets/materials/: crt_vertex.glsl
assets/textures/: fireball.png~  neo_zero_tiles.png~  player.png~  white_texture.png~
characters/: Abraxas.json
cli/: Cargo.toml  README.md
cli/mapconv/src/: main.rs
docs/: README.md  abilities.md  actors.md  behavior_sets.md  data_types.md  dialogue.md  dialogue_and_missions.md  items.md  maps.md  missions.md  modules.md  physics.md  rendering.md  resources.md  web_assembly.md
examples/building_scenes/: config.json
examples/building_scenes/characters/: Test Character.json
examples/building_scenes/data/: actors.json  assets.json  character_classes.json  scenario.json
examples/building_scenes/src/: example_node.rs  main.rs
examples/example_project/: build_wasm.sh  config.json
examples/example_project/assets/: actors.json  items.json  resources.json  scenario.json  tiled_maps.json
examples/example_project/characters/: Abraxas.json  Unnamed Player.json
examples/example_project/data/: abilities.json  actors.json  assets.json  dialogue.json  gui_theme.json  scenario.json
examples/example_project/modules/: active_modules.json
examples/example_project/src/: main.rs
macros/: Cargo.toml
macros/src/: global_value.rs  lib.rs  map_object.rs  string_id.rs
modules/test_module/: module_actors.json  test_module.json
saved_games/: Abraxas Fri, 27 Aug 2021 15:23:58 +0000.json  Abraxas Fri, 27 Aug 2021 15:44:53 +0000.json  save_game.json  saved.json
src/: ability.rs  actions.rs  audio.rs  chapter.rs  chapters.rs  character.rs  circle.rs  config.rs  dialogue.rs  error.rs  events.rs  file_io.rs  game.rs  game_options.rs  global.rs  global_value.rs  globals.rs  graphics.rs  gui.rs  helpers.rs  input.rs  inventory.rs  item.rs  items.rs  json.rs  lib.rs  main.rs  map.rs  math.rs  missions.rs  modules.rs  nodes.rs  noise_level.rs  physics.rs  physics_body.rs  player.rs  prelude.rs  render.rs  resources.rs  save_games.rs  (+8 more)
src/behavior_sets/: default_humanoid.rs  mod.rs
src/graphics/: rendering.rs  sprites.rs
src/gui/: button_builder.rs  chapter_select.rs  character.rs  checkbox.rs  confirmation_modal.rs  dialogue.rs  game_menu.rs  helpers.rs  interaction.rs  inventory.rs  main_menu.rs  menu_builder.rs  mod.rs  prelude.rs  skins.rs  theme.rs  window_builder.rs
src/inventory/: equipped.rs  inventory.rs  mod.rs
src/json/: ability.rs  actor.rs  gui.rs  item.rs  map.rs  math.rs  mod.rs  physics.rs  render.rs
src/map/: map.rs  mod.rs  tiled.rs
src/math/: circle.rs  mod.rs  rect.rs  vector.rs
src/nodes/: actor.rs  beams.rs  camera.rs  camera_control.rs  camera_controller.rs  continuous_beams.rs  draw_buffer.rs  game_state.rs  hud.rs  input.rs  item.rs  light_source.rs  map_renderer.rs  mod.rs  post_processing.rs  projectiles.rs
src/physics/: beam.rs  collider.rs  mod.rs  physics_body.rs  ray_cast.rs  raycast.rs
src/render/: animation.rs  helpers.rs  material.rs  mod.rs  sprite.rs  sprite_animation.rs  sprites.rs  text.rs  texture.rs  viewport.rs
src/util/: global_value.rs  map_object.rs  string_id.rs  text.rs
web/: capstone.d  index.html
web/assets/: dialogue.json
(+764 files in other folders)
