[package]
name = "rust-rpg-toolkit"
version = "0.1.0"
edition = "2018"
authors = ["Ole A. Sjo Fasting <oasf@polygo.no>"]
description = "An engine for creating action RPGs with Rust and/or JSON"
documentation = "https://github.com/olefasting/rust_rpg_toolkit/tree/master/docs"
readme = "./README.md"
keywords = ["game", "engine", "sdk"]
categories = ["game-engines"]
license = "MIT"
repository = "https://github.com/olefasting/rust_rpg_toolkit"

[features]
default = []
collision_between_actors = []

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["cli"]

[[example]]
name = "example-project"
path = "examples/example_project/src/main.rs"
crate-type = ["bin"]

[[example]]
name = "building-scenes"
path = "examples/building_scenes/src/main.rs"
crate-type = ["bin"]

[dependencies]
# lazy_static = "1.4.0"
chrono = "0.4.19"
regex = "1.5.4"
hex = "0.4.3"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

macroquad = { version = "0.3" }
macroquad-particles = { version = "0.1", features = ["nanoserde"] }
macroquad-profiler = "0.1"
quad-storage = "0.1.0"

mode = "0.4.1"
gilrs = { version = "0.8.1", features = ["serde-serialize", "wasm-bindgen"] }
bracket-pathfinding = "0.8.4"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# sapp-jsutils = "0.1.5"
