[package]
name = "rust-rpg-toolkit"
version = "0.1.1"
edition = "2018"
authors = ["Ole A. Sjo Fasting <oasf@polygo.no>"]
description = "An engine for creating action RPGs with Rust and/or JSON"
documentation = "https://github.com/olefasting/rust_rpg_toolkit/tree/master/docs"
readme = "./README.md"
keywords = ["gamedev", "macroquad", "serde"]
categories = ["game-development"]
license = "MIT"
repository = "https://github.com/olefasting/rust_rpg_toolkit"

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
collision-between-actors = []

[workspace]
members = ["cli"]

[[example]]
name = "example-project"
path = "examples/example_project/src/main.rs"
crate-type = ["bin"]

[[example]]
name = "building-scenes"
path = "examples/building_scenes/src/main.rs"
crate-type = ["bin"]

[dependencies]
ff-particles = { version = "0.1", features = ["serde"] }
#fishsticks = { git = "https://github.com/PotatoTech/fishsticks", features = ["bundled-sdl2"] }

# lazy_static = "1.4"
chrono = "0.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

macroquad = { version = "0.3" }
macroquad-profiler = "0.1"
quad-storage = "0.1"

mode = "0.4"
bracket-pathfinding = "0.8"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# sapp-jsutils = "0.1"
